--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -503,7 +503,7 @@ div.tocify {
 <p><strong>when and where</strong> The first midterm exam (out of two) is coming up Monday <strong>March 15</strong>. You will have the whole 50 minute class period to take the exam. The exam will be online (of course) and administered on Top Hat.</p>
 <p><strong>what</strong> The exam will cover:</p>
 <ul>
-<li>All material in Chapters 1-3 of the Gotelli book <em>including basic matrix population modeling concepts</em>.<br />
+<li>All material in Chapters 1-3 of the Gotelli book <em>including matrix population modeling concepts</em>.<br />
 </li>
 <li>All material covered in lectures up to and including this lecture on matrix population models.<br />
 </li>
