--- a/LECTURE9.html
+++ b/LECTURE9.html
@@ -26,6 +26,17 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -482,7 +493,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Small-population paradigm</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2020</h4>
+<h4 class="date">Spring 2021</h4>
 
 </div>
 
@@ -552,7 +563,6 @@ div.tocify {
 <p>See <a href="LAB5.html">Lab 5</a> for the related MVP activity.</p>
 <p><strong>Q</strong> Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [tophat]</p>
 <p><strong>Q</strong> Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to <em>environmental stochasticity</em> than species that occupy larger geographic ranges? [tophat]</p>
-<p>Aside: <a href="https://insightmaker.com/insight/161312/MSY2">MSY Insightmaker model</a>- last year Dr. Stewart gave a mini-lecture on MSY to clarify some concepts- you can use the above link to review basic concepts about logistic growth and MSY.</p>
 <p><a href="LECTURE10.html">–go to next lecture–</a></p>
 </div>
 
@@ -567,7 +577,7 @@ div.tocify {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -606,7 +616,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
