--- a/LECTURE12.html
+++ b/LECTURE12.html
@@ -600,7 +600,7 @@ Lab 6: metapopulation models</p>
 <p>Finally, you need to make sense of all the simulations you just ran.</p>
 <p>There are two types of data analysis tools that you will need to be able to use the simulation results to answer your questions: <strong>graphical visualization</strong> and <strong>statistical analysis</strong>.</p>
 <p>These tools- visualization and statistical analysis - are diverse, and there is no one-size-fits-all way that you should visualize and analyze your simulation results. It really depends on your question!!</p>
-<p>I will give you some ideas here about graphical representations in the demo PVA - but just remember you are not limited to these ideas- be creative! Since this class is not a statistics class, I don’t necessarily expect you to do sophisticated stats as part of your project- but Megan and I can work with your groups individually to figure out some simple stats that make sense for your project.</p>
+<p>I will give you some ideas here about graphical representations in the demo PVA - but just remember you are not limited to these ideas- be creative! Since this class is not a statistics class, I don’t necessarily expect you to do sophisticated stats as part of your project- but your TAs and I can work with your groups individually to figure out some simple stats that make sense for your project.</p>
 </div>
 </div>
 </div>
