--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -26,6 +26,17 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -482,19 +493,17 @@ div.tocify {
 
 <h1 class="title toc-ignore">Metapopulations</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2020</h4>
+<h4 class="date">Spring 2021</h4>
 
 </div>
 
 
 <div id="upcoming-midterm-exam" class="section level3">
 <h3>Upcoming midterm exam</h3>
-<p><strong>when and where</strong> The second midterm exam (out of two) is coming up on <strong>April 15</strong>. You will have the whole 50 minute class period to take the exam. The exam will take place in our regular classroom, unless you make prior arrangements.</p>
+<p><strong>when and where</strong> The second midterm exam (out of two) is coming up on <strong>April 14</strong>. You will have the whole 50 minute class period to take the exam. We will use the same format as the first midterm.</p>
 <p><strong>what</strong> The exam will cover:</p>
 <ul>
 <li>Everything from the first midterm<br />
-</li>
-<li>Matrix population models, including all of Gotelli Chapter 3<br />
 </li>
 <li>Stochasticity and uncertainty (lecture and lab)<br />
 </li>
@@ -717,7 +726,7 @@ newexp-[nearby sink]
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -756,7 +765,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
