--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -500,7 +500,7 @@ div.tocify {
 
 <div id="upcoming-midterm-exam" class="section level3">
 <h3>Upcoming midterm exam</h3>
-<p><strong>when and where</strong> The second midterm exam (out of two) is coming up on <strong>April 14</strong>. You will have the whole 50 minute class period to take the exam. We will use the same format as the first midterm.</p>
+<p><strong>when and where</strong> The second midterm exam (out of two) is coming up on <strong>April 19</strong>. You will have the whole 50 minute class period to take the exam. We will use the same format as the first midterm.</p>
 <p><strong>what</strong> The exam will cover:</p>
 <ul>
 <li>Everything from the first midterm<br />
@@ -512,8 +512,8 @@ div.tocify {
 <li>Metapopulations and source-sink dynamics (lectures and lab), including Chapter 4 of Gotelli.</li>
 </ul>
 <p><em>The exam will consist of a mixture of multiple-choice and short-answer questions.</em></p>
-<p>I will host a review session via zoom on Monday April 13 at 5pm. See the zoom tab on webcampus for details.</p>
-<p>Finally, don’t forget that lab 5 (stochasticity) is due at the end of this week – Friday, April 10 – along with your PVA models and justifications.</p>
+<p>I will host a review session via zoom on Wed April 14 during our regular class time.</p>
+<p>Finally, don’t forget that lab 5 (stochasticity) is due at the end of this week – Friday, April 9 – along with your PVA models and justifications.</p>
 </div>
 <div id="metapopulations" class="section level2">
 <h2>Metapopulations</h2>
