--- a/LAB6.html
+++ b/LAB6.html
@@ -26,6 +26,17 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
+
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -482,7 +493,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Lab 6: Metapopulation modeling</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2020</h4>
+<h4 class="date">Spring 2021</h4>
 
 </div>
 
@@ -528,7 +539,7 @@ div.tocify {
 </div>
 <div id="variant-2-internal-colonization" class="section level3">
 <h3>Variant #2: internal colonization</h3>
-<p>In this scenario, colonization can only happen via immigration from within the metapopulation itself. So when few patches are colonized, colonization is low because of a lack of potential immigrants in the metapopultion.</p>
+<p>In this scenario, colonization can only happen via immigration from within the metapopulation itself. So when few patches are colonized, colonization is low because of a lack of potential immigrants in the metapopulation.</p>
 <p><span class="math inline">\(p_i = i \cdot f \qquad \text{(Eq. 5)}\)</span></p>
 <p><span class="math inline">\(i\)</span> represents the strength of internal colonization (how much the probability of patch-level colonization increases with each new occupied patch in the metapopulation.</p>
 <p>In this model, the colonization rate is zero if all patches are unoccupied (there are no sources of immigrants to colonize any patches!)</p>
@@ -549,13 +560,13 @@ div.tocify {
 </div>
 <div id="what-is-a-metapopulation" class="section level2">
 <h2>What is a metapopulation?</h2>
-<p>The term <em>metapopulation</em> is often used to refer to models where we don’t care about abundance, we only care about occupancy- as in the model described above. However, a metapopulation is simply a <em>population of patches</em>. We can keep track of patch abundance in a metapopulation model. In fact, if we want, each patch can contain a stage-structured, density dependent population if we really want!</p>
+<p>The term <em>metapopulation</em> is often used to refer to models where we don’t care about abundance, we only care about occupancy- as in the model described above. However, a metapopulation is simply a <em>collection of interconnected patches</em>. We can keep track of patch abundance in a metapopulation model. In fact, if we want, each patch can contain a stage-structured, density dependent population if we really want!</p>
 <p>Just as we can use metapopulation models to study the probability of <strong>regional extinction</strong>, we can also study <strong>regional abundance</strong> and regional abundance trends across the entire metapopulation.</p>
 </div>
 <div id="exercise-1-basic-metapopulation-terms-and-concepts" class="section level2">
 <h2>Exercise 1: basic metapopulation terms and concepts!</h2>
 <p>HINT: <em>use the Gotelli book!!!</em></p>
-<p>1a. An endangered population of 100 frogs lives in a single large pond. One proposal for conserving the frog population is to split it into three populations of 33 frogs, each in a separate pond (assume the ponds are located far enough away from each other so you can reasonbly assume that extinction risks are independent of one another). You know from your demographic models that decreasing the frog population from 100 to 33 individuals will increase the annual risk of extinction from 10% to 50%. Over the next 3 years, is it a better strategy to retain the single population or to split it into three (and “spread out the risk”)? Show your calculations, and explain your reasoning! [NOTE: you may want to refer to the ‘spreading the risk’ topic in the Metapopulations lecture and video. Also, recall that to compute the probability of three independent events of probability <em>p</em>, you simply multiply the probability by itself three times: <span class="math inline">\(P(three\ events) = P(one\ event)^3\)</span>].</p>
+<p>1a. An endangered population of 100 frogs lives in a single large pond. One proposal for conserving the frog population is to split it into three populations of 33 frogs, each in a separate pond (assume the ponds are located far enough away from each other so you can reasonably assume that extinction risks are independent of one another). You know from your demographic models that decreasing the frog population in a pond from 100 to 33 individuals will increase the annual risk of extinction (per patch) from 10% to 25%. Over the next 3 years, is it a better strategy to retain the single population or to split it into three (and “spread out the risk”)? Show your calculations, and explain your reasoning! You can assume that each of the three new ponds are independent, with no dispersal between them. [NOTE: you may want to refer to the ‘spreading the risk’ topic in the Metapopulations lecture and video. Also, recall that to compute the probability of three independent events of probability <em>p</em>, you simply multiply the probability by itself three times: <span class="math inline">\(P(three\ events) = P(one\ event)^3\)</span>].</p>
 <p>1b. Build an InsightMaker model for the basic island-mainland metapopulation model. The total fraction of occupied patches <span class="math inline">\(f\)</span> should be represented as a [Stock] (this stock can not go negative!) and there should be two [Flows]: one for <em>colonization</em> (I) and one for <em>extinction</em> (E). Initialize <span class="math inline">\(f\)</span> at 0.9. The extinction and colonization probabilities (<span class="math inline">\(p_e\)</span> and <span class="math inline">\(p_i\)</span>) should be represented as [Variables]. Set <span class="math inline">\(p_e\)</span> to 0.15 and <span class="math inline">\(p_i\)</span> to 0.4. Clone your Insight and provide a link to your working InsightMaker metapopulation model as part of your lab write-up.</p>
 <p>1c. On the basis of your Insightmaker model, what happens to <span class="math inline">\(f\)</span> over the course of the simulation? Does the metapopulation go extinct (regional extinction)? Does <span class="math inline">\(f\)</span> reach an equilibrium? If so, is this equilibrium <strong>stable</strong> or <strong>unstable</strong>? Explain your reasoning. [remember that to test for stability of equilibria, set the initial value of the stock at it’s equilibrium value. From there, ‘perturb’ the initial value by setting it above and below the equilibrium. Does it return to the equilibrium state in all cases?]</p>
 <p>1d. Compare your InsightMaker results at equilibrium (provide a plot) with the results from applying Equation 4.4 from Gotelli. Show your work. Do the two answers match (i.e., do your results from applying the equation match with the equilibrium from your InsightMaker model)?</p>
@@ -573,7 +584,7 @@ div.tocify {
 <p>Each population/patch in the metapopulation is represented by an “individual”, or “agent”. These individuals cannot move (they are patches of land, after all), but they can influence each other via immigration and emigration!</p>
 <p>The landscape is 200 km by 200 km. Each time a simulation is initiated, patches are placed randomly in the landscape. The <strong>metapopulation size</strong> (total number of patches) is initialized at 10 (but you can change this quantity using a slider bar).</p>
 <p>Each patch potentially contains a population of animals. If it has &gt;= 2 individuals living in it, it is considered “occupied”.</p>
-<p>Each patch has its own carrying capacity (K)- some patches have very low carrying capacity, and some have very high carrying capacity. The distribution of K among patches is approximately <em>lognormal</em>. This means that there are usually a few very large patches in the landscape. The minimum K is 2.</p>
+<p>Each patch has its own carrying capacity (K)- some patches have very low carrying capacity, and some have very high carrying capacity. The distribution of K among patches is approximately <em>lognormal</em>. This means that there are usually a few very large patches in the landscape but most patches are pretty small. The minimum K is 2.</p>
 <p>Abundance dynamics are density-dependent, and population growth is computed as a function of <strong>r_max</strong>, <strong>local carrying capacity</strong>, and previous-year local abundance using the <strong>Ricker</strong> growth model:</p>
 <p><span class="math inline">\(N_{t+1} = N_t e^{r_{max}(1-\frac{N_t}{K})}\)</span></p>
 <p>This is one of the most commonly used models for discrete logistic population growth (very analogous to the logistic growth model we have already seen!).</p>
@@ -593,16 +604,16 @@ div.tocify {
 </li>
 <li>Restore habitat, effectively doubling the number of patches.</li>
 </ol>
-<p>Which management strategy would be most effective for ensuring that the metapopulation does not go exinct (prevent regional extinction)? Justify your answer with supporting figures.</p>
+<p>Which management strategy would be most effective for ensuring that the metapopulation does not go extinct (prevent regional extinction)? Justify your answer with supporting figures.</p>
 <p>2c. [thought question] Is it possible for <span class="math inline">\(r_{max}\)</span> to be positive and yet for the total regional abundance to exhibit a persistent declining trend? Explain your reasoning, using at least one biologically realistic example (i.e., describe a scenario under which this may actually occur in the real world). You can use the agent-based metapopulation model in InsightMaker to help test your ideas, but this is not required.</p>
 <p>##Checklist for Lab 6 completion</p>
 <ul>
 <li><p>Please bundle all your responses into a single Word document and submit <em>using WebCampus</em>!</p></li>
 <li><p>Where appropriate, URLs for your InsightMaker models should be pasted in your lab submission (MS Word document).</p></li>
 </ul>
-<p><strong><em>Due Apr. 12 at midnight.</em></strong></p>
+<p><strong><em>Due Apr. 23 at 11:55pm</em></strong></p>
 <ul>
-<li>Word document with short answers, model URLs, and figures (where appropriate)
+<li>Short answers, model URLs, and figures (where appropriate): all on Top Hat
 <ul>
 <li><strong>Exercise 1</strong>
 <ul>
@@ -641,7 +652,7 @@ div.tocify {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -680,7 +691,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
