--- a/LAB6.html
+++ b/LAB6.html
@@ -560,7 +560,7 @@ div.tocify {
 </div>
 <div id="what-is-a-metapopulation" class="section level2">
 <h2>What is a metapopulation?</h2>
-<p>The term <em>metapopulation</em> is often used to refer to models where we don’t care about abundance, we only care about occupancy- as in the model described above. However, a metapopulation is simply a <em>collection of interconnected patches</em>. We can keep track of patch abundance in a metapopulation model. In fact, if we want, each patch can contain a stage-structured, density dependent population if we really want!</p>
+<p>The term <em>metapopulation</em> is often used to refer to models where we don’t care about abundance, we only care about occupancy- as in the model described above. However, a metapopulation is simply a <em>collection of interconnected patches</em>. We can keep track of patch abundance in a metapopulation model. In fact, each patch can contain a stage-structured, density dependent population if we really want!</p>
 <p>Just as we can use metapopulation models to study the probability of <strong>regional extinction</strong>, we can also study <strong>regional abundance</strong> and regional abundance trends across the entire metapopulation.</p>
 </div>
 <div id="exercise-1-basic-metapopulation-terms-and-concepts" class="section level2">
