--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -654,7 +654,9 @@ Initial abundance in distant sink: 10<br />
 K for source population: 100<br />
 K for nearby sink: 50<br />
 K for mid-range sink: 25<br />
-K for distant sink: 15 Maximum dispersal rate: 10% per year (0.1) Lambda (discrete growth rate) for sink populations [lambda bad]: 0.8<br />
+K for distant sink: 15<br />
+Maximum dispersal rate: 10% per year (0.1)<br />
+Lambda (discrete growth rate) for sink populations [lambda bad]: 0.8<br />
 Lambda for source population [lambda good]: 2.1</p>
 <p>NOTE: maximum dispersal rate (in this model) is the rate of dispersal between neighboring patches. Patches that are located farther apart have dispersal rates that are computed as a fraction of the maximum rate.</p>
 <ol start="3" style="list-style-type: decimal">
