--- a/schedule.html
+++ b/schedule.html
@@ -664,13 +664,13 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/21/2021</td>
-<td align="left">NO CLASS: READING DAY</td>
+<td align="left">NO CLASS: READING DAY (peer review papers due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/23/2021</td>
-<td align="left">LAB: STUDENT PRESENTATIONS AND PEER REVIEW</td>
+<td align="left">LAB: PEER REVIEW</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
