--- a/LAB6.html
+++ b/LAB6.html
@@ -592,7 +592,11 @@ div.tocify {
 <p>There is, of course, demographic stochasticity in this model!</p>
 <p>Graphical summaries are available, which illustrate the spatial configuration of the patches, the total metapopulation occupancy, the total metapopulation abundance, and the total numbers of immigrants/emigrants.</p>
 <p>Take some time to open the model (clone it!) and get familiar with the parameters and model behavior. If you don’t understand something, ask your instructor! Make sure you have the following starting parameters:</p>
-<p>Metapopulation size: 10 patches r_max: 0.11 maxdist (maximum dispersal distance): 50 kilometers dispersal rate: 0.25 Mean K per population: 10</p>
+<p>Metapopulation size: 10 patches<br />
+r_max: 0.11<br />
+maxdist (maximum dispersal distance): 50 kilometers<br />
+dispersal rate: 0.25<br />
+Mean K per population: 10</p>
 <p>NOTE: there is one parameter (max dispersal distance, maxdist) you will need to pay attention to, but it is not represented by a value slider (I couldn’t get it to work that way, unfortunately). To alter the maximum dispersal distance, you need to open the equation editor for the [Immigrants] variable, and change the value in the top line, which should look something like this:</p>
 <pre><code>maxdist &lt;- 50</code></pre>
 <p>2a. Use InsightMaker’s <em>sensitivity testing tool</em> to run the model 50 times. What is the approximate risk of regional (global) extinction of this metapopulation over 100 years? What is the abundance trend (that is, overall regional abundance) over time? Provide plots to justify your answer.</p>
